RESOLVED FIXED281875
Sometimes, WKTR installation does not succeed in the Simulator
https://bugs.webkit.org/show_bug.cgi?id=281875
Summary Sometimes, WKTR installation does not succeed in the Simulator
Per Arne Vollan
Reported 2024-10-21 14:53:50 PDT
Sometimes, WKTR installation does not succeed in the Simulator.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-21 14:54:01 PDT
Per Arne Vollan
Comment 2 2024-10-21 15:06:04 PDT
EWS
Comment 3 2024-10-23 21:52:07 PDT
Committed 285637@main (99fde22c848d): <https://commits.webkit.org/285637@main> Reviewed commits have been landed. Closing PR #35544 and removing active labels.
WebKit Commit Bot
Comment 4 2024-10-24 09:32:48 PDT
Re-opened since this is blocked by bug 282047
Per Arne Vollan
Comment 5 2024-10-24 20:55:54 PDT
EWS
Comment 6 2024-10-25 10:27:05 PDT
Committed 285704@main (642ca0497fb3): <https://commits.webkit.org/285704@main> Reviewed commits have been landed. Closing PR #35709 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.